--- a/pages/index.css
+++ b/pages/index.css
@@ -18,3 +18,6 @@
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__info-wrapp/profile__info-wrapp.css);
 @import url(../blocks/profile/__avatar-wrapp/profile__avatar-wrapp.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/_copyright/footer__copyright.css);
