feat: add section card

--- a/pages/index.css
+++ b/pages/index.css
@@ -21,3 +21,11 @@
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/_copyright/footer__copyright.css);
+
+@import url(../blocks/cards/cards.css);
+
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__button-like/elements__button-like.css);
+@import url(../blocks/elements/__card/elements__card.css);
+@import url(../blocks/elements/__discription/elements__discription.css);
+@import url(../blocks/elements/__image/elements__image.css);
