--- a/blocks/element/__button-like/element__button-like.css
+++ b/blocks/element/__button-like/element__button-like.css
@@ -1,7 +1,10 @@
-.elements__button-like {
-  width: 22px;
-  height: 19px;
+.element__button-like {
   background-image: url(../../../images/button-like-disabled.svg);
   background-repeat: no-repeat;
   background-position: center;
+  background-color: transparent;
+  border: none;
+  width: 22px;
+  height: 19px;
+  cursor: pointer;
 }
