--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,7 +1,21 @@
 .elements {
-  list-style: none;
+  margin: 47px auto 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px 17px;
-  padding: 0;
+  align-items: center;
+  justify-content: center;
+}
+
+@media all and (max-width: 900px) {
+  .elements {
+    grid-template-columns: repeat(2, 1fr);
+    
+  }
+}
+
+@media all and (max-width: 700px) {
+  .elements {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
