--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,3 +1,16 @@
 .profile__description {
   margin: 0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.22;
+}
+
+@media all and (max-width: 700px) {
+  .profile__description {
+    margin-top: 14px;
+    font-size: 14px;
+    line-height: 1.17;
+    text-align: center;
+  }
 }
