--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,10 +2,18 @@
   width: 24px;
   height: 24px;
   background-image: url("../../../images/button-editProfile-white.svg");
-  background-color: black;
+  background-color: transparent;
   background-position: center;
   background-repeat: no-repeat;
   border: 1px white solid;
   cursor: pointer;
+  margin-left: 18px;
+  margin-top: 8px;
+}
 
+@media all and (max-width: 700px) {
+  .profile__edit-button {
+    margin: 0 0 4px 10px;
+
+  }
 }
