--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,6 +1,10 @@
 .profile__info {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border: 1px red solid;
+  margin-left: 30px;
+}
+
+@media all and (max-width: 700px) {
+  .profile__info {
+    margin-top: 23px;
+
+  }
 }
