--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,3 +1,15 @@
 .profile__name {
   margin: 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 42px;
+  line-height: 1.48;
+}
+
+@media all and (max-width: 700px) {
+  .profile__name {
+    font-size: 27px;
+    line-height: 1.33;
+    text-align: center;
+  }
 }
