--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,4 +1,11 @@
 .profile {
   display: flex;
-  border: 1px red solid;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media all and (max-width: 700px) {
+  .profile {
+    flex-direction: column;
+  }
 }
