--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -10,6 +10,10 @@
   cursor: pointer;
 }
 
+.profile__add-button:hover {
+  opacity: 0.6;
+}
+
 @media all and (max-width: 700px) {
   .profile__add-button {
     width: 282px;
