--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -11,6 +11,10 @@
   margin-top: 8px;
 }
 
+.profile__edit-button:hover {
+  opacity: 0.6;
+}
+
 @media all and (max-width: 700px) {
   .profile__edit-button {
     margin: 0 0 4px 10px;
