--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,6 @@
 @import url(../vendor/fonts/inter.css);
 
 @import url(../blocks/page/page.css);
-@import url(../blocks/links/links.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
@@ -22,8 +21,6 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/_copyright/footer__copyright.css);
 
-@import url(../blocks/cards/cards.css);
-
 @import url(../blocks/elements/elements.css);
 
 @import url(../blocks/element/element.css);
@@ -39,3 +36,4 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
