--- a/blocks/element/__button-like/element__button-like.css
+++ b/blocks/element/__button-like/element__button-like.css
@@ -11,10 +11,8 @@
 
 .element__button-like:active {
   background-image: url(../../../images/button-like-active.svg);
-}
-
-.element__button-like:disabled {
-  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .element__button-like:hover {
