--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,11 +1,16 @@
 .popup__container {
-  width: 430px;
   display: flex;
   flex-direction: column;
   background-color: white;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  padding: 34px 36px 37px;
   margin: auto;
   position: relative;
+  padding: 34px 36px 37px;
+}
+
+@media all and (max-width: 700px) {
+  .popup__container {
+    padding: 25px 22px;
+  }
 }
