--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -8,12 +8,17 @@
   border: none;
   border-bottom: 1px #E5E5E5 solid;
   margin-top: 30px;
-  width: 358px;
   height: 27px;
   
 }
 
 .popup__input:first-child {
   margin-top: 54px;
+}
+
+@media all and (max-width: 700px) {
+  .popup__input:first-child {
+    margin-top: 75px;
+  }
 }
 
