--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -11,7 +11,16 @@
   color: white;
   text-align: center;
   border-radius: 2px;
-  margin-top: 62px;
+  margin-top: 48px;
+  position: relative;
+}
+
+@media all and (max-width: 700px) {
+  .popup__save-button {
+    width: 238px;
+    height: 46px;
+    margin-top: 45px;
+  }
 }
 
 .popup__save-button:hover {
