--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,3 +6,10 @@
   line-height: 1.29;
   color: black;
 }
+
+@media all and (max-width: 700px) {
+  .popup__title {
+    font-size: 18px;
+    line-height: 1.22;
+  }
+}
