--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -6,7 +6,7 @@
   width: 100%;
   padding: 0;
   border: none;
-  border-bottom: 1px #E5E5E5 solid;
+  border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
   margin-top: 30px;
   height: 27px;
   
