--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -17,7 +17,9 @@
 
 @media all and (max-width: 700px) {
   .profile__edit-button {
-    margin: 0 0 4px 10px;
+    margin: 0 0 0 10px;
+    width: 18px;
+    height: 18px;
 
   }
 }
