--- a/pages/index.css
+++ b/pages/index.css
@@ -39,3 +39,8 @@
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+
+@import url(../blocks/popup-picture/popup-picture.css);
+@import url(../blocks/popup-picture/__title/popup-picture__title.css);
+@import url(../blocks/popup-picture/__image/popup-picture__image.css);
+@import url(../blocks/popup-picture/__element/popup-picture__element.css);
