--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,9 +2,15 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
-  background: rgba(0,0,0,0.5);
-  display: none;
-  z-index: 3;
+  background-color: rgba(0, 0, 0, 0.5);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility .4s, opacity .3s ease;
+  z-index: 10;
 }
