--- a/pages/index.css
+++ b/pages/index.css
@@ -44,3 +44,4 @@
 @import url(../blocks/popup-picture/__title/popup-picture__title.css);
 @import url(../blocks/popup-picture/__image/popup-picture__image.css);
 @import url(../blocks/popup-picture/__element/popup-picture__element.css);
+@import url(../blocks/popup-picture/__close-button/popup-picture__close-button.css);
