--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -7,10 +7,9 @@
   padding: 0;
   border: none;
   border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
-  margin-top: 30px;
+  /* margin-top: 30px; */
   height: 27px;
-  outline:none;
-  
+  outline: none;
 }
 
 .popup__input:first-child {
