--- a/pages/index.css
+++ b/pages/index.css
@@ -37,6 +37,7 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__save-button/_inactive/popup__save-button_inactive.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 
@@ -45,3 +46,7 @@
 @import url(../blocks/popup-picture/__image/popup-picture__image.css);
 @import url(../blocks/popup-picture/__element/popup-picture__element.css);
 @import url(../blocks/popup-picture/__close-button/popup-picture__close-button.css);
+
+@import url(../blocks/form/__input/form__input_type_error.css);
+@import url(../blocks/form/__input-error/form__input-error_active.css);
+@import url(../blocks/form/__span/form__span.css);
