--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,5 +1,6 @@
 .profile__avatar {
-  width: 120px;
-  height: 120px;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
 }
