--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -17,6 +17,8 @@
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__name-button/profile__name-button.css);
+@import url(../blocks/profile/__avatar-edit/profile__avatar-edit.css);
+@import url(../blocks/profile/__avatar-wrapper/profile__avatar-wrapper.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -30,6 +32,8 @@
 @import url(../blocks/element/__discription/element__discription.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__like-number/element__like-number.css);
+@import url(../blocks/element/__like-container/element__like-container.css);
 
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
@@ -40,6 +44,7 @@
 @import url(../blocks/popup/__save-button/_inactive/popup__save-button_inactive.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__title-confirm/popup__title-confirm.css);
 
 @import url(../blocks/popup-picture/popup-picture.css);
 @import url(../blocks/popup-picture/__title/popup-picture__title.css);
@@ -50,3 +55,4 @@
 @import url(../blocks/form/__input/form__input_type_error.css);
 @import url(../blocks/form/__input-error/form__input-error_active.css);
 @import url(../blocks/form/__span/form__span.css);
+
