--- a/main.css
+++ b/main.css
@@ -4,25 +4,29 @@
 .header{border-bottom:1px solid rgba(84,84,84,.7);display:flex;margin:45px auto 0;max-width:880px;position:relative}@media (max-width:700px){.header{margin-top:28px}}
 .header__logo{height:33px;margin-bottom:41px;width:142px}@media (max-width:900px){.header__logo{margin-left:27px}}@media (max-width:700px){.header__logo{height:25px;margin-bottom:32px;width:105px}}
 .content{margin:40px auto 66px;max-width:880px}@media (max-width:900px){.content{margin:40px 19px 66px}}
-.profile{align-items:center;display:flex;justify-content:space-between}@media (max-width:700px){.profile{flex-direction:column}}
+.profile{align-items:center;display:flex;justify-content:space-between}@media (max-width:735px){.profile{flex-direction:column}}
 .profile__container{align-items:center;display:flex}@media (max-width:700px){.profile__container{flex-direction:column}}
 .profile__add-button{background-color:transparent;background-image:url(images/button-addProfile-white.bed8c136e13907f5eefb.svg);background-position:50%;background-repeat:no-repeat;border:2px solid #fff;border-radius:2px;cursor:pointer;height:50px;width:150px}.profile__add-button:hover{opacity:.6}@media (max-width:700px){.profile__add-button{margin-top:36px;width:282px}}
-.profile__avatar{border-radius:50%;height:120px;width:120px}
+.profile__avatar{border-radius:50%;height:100%;-o-object-fit:cover;object-fit:cover;width:100%}
 .profile__description{font-size:18px;font-style:normal;font-weight:400;line-height:1.22;margin:0;max-width:335px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media (max-width:700px){.profile__description{font-size:14px;line-height:1.17;margin-top:14px;max-width:282px;text-align:center}}
 .profile__edit-button{background-color:transparent;background-image:url(images/button-editProfile-white.6c7bf05444b9793fdf6e.svg);background-position:50%;background-repeat:no-repeat;border:1px solid #fff;cursor:pointer;height:24px;margin-left:18px;margin-top:8px;width:24px}.profile__edit-button:hover{opacity:.6}@media (max-width:700px){.profile__edit-button{height:18px;margin:0 0 0 10px;width:18px}}
 .profile__info{margin-left:30px}@media (max-width:700px){.profile__info{margin:23px 0 0}}
 .profile__name{font-size:42px;font-style:normal;font-weight:500;line-height:1.48;margin:0;max-width:300px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media (max-width:700px){.profile__name{font-size:27px;line-height:1.33;max-width:200px;text-align:center}}
 .profile__name-button{align-items:center;display:flex}
+.profile__avatar-edit{background-image:url(images/Vector.ae1a976ddb506239e9f0.svg);background-position:50%;background-repeat:no-repeat;background-size:26px 26px;border-radius:50%;bottom:0;left:0;opacity:0;position:absolute;right:0;top:0;transition:all .3s}.profile__avatar-edit:hover{background-color:rgba(0,0,0,.8);cursor:pointer;opacity:1}
+.profile__avatar-wrapper{height:120px;margin:0 30px 0 0;position:relative;width:120px}
 .footer{margin:66px 0 60px}
 .footer__copyright{color:#545454;font-size:18px;font-style:normal;font-weight:400;line-height:1.22;margin:0}@media (max-width:700px){.footer__copyright{font-size:14px;line-height:1.17}}
 .elements{align-items:center;display:grid;gap:20px 17px;grid-template-columns:repeat(auto-fit,282px);justify-content:center;margin:47px auto 0}
 .element{background-color:#fff;border-radius:10px;position:relative;width:282px}
 .element__button-delete{background:none;background-image:url(images/button-delete.ce3b64935accf9b8212e.svg);background-position:50%;background-repeat:no-repeat;background-size:cover;border:none;cursor:pointer;height:19px;margin:0;padding:0;position:absolute;right:20px;top:20px;transition:opacity .3s ease-out;width:18px;z-index:2}.element__button-delete:hover{opacity:.5}
-.element__button-like{background-color:transparent;background-image:url(images/button-like-disabled.99d8d15a13fccff0ca18.svg);background-position:50%;background-repeat:no-repeat;border:none;cursor:pointer;height:19px;width:22px}.element__button-like:hover{opacity:.5}
+.element__button-like{background-color:transparent;background-image:url(images/button-like-disabled.99d8d15a13fccff0ca18.svg);background-position:50%;background-repeat:no-repeat;border:none;cursor:pointer;height:19px;margin-bottom:3px;width:22px}.element__button-like:hover{opacity:.5}
 .element__button-like_active{background-image:url(images/button-like-active.35948469632d0421d697.svg);background-position:50%;background-repeat:no-repeat}
 .element__discription{align-items:center;display:flex;flex-direction:row;justify-content:space-between;margin:25px auto;padding:0 20px}
 .element__image{background-color:#000;border-radius:10px 10px 0 0;cursor:zoom-in;display:block;height:282px;-o-object-fit:cover;object-fit:cover;width:100%}
 .element__title{color:#000;font-size:24px;font-style:normal;font-weight:900;line-height:1.29;margin:0;max-width:200px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.element__like-number{align-self:center;color:#000;font-size:13px;line-height:1rem;margin:0;padding:0}
+.element__like-container{display:flex;flex-direction:column;flex-wrap:wrap}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;flex-direction:column;height:100vh;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:visibility .4s,opacity .3s ease;visibility:hidden;width:100vw;z-index:10}
 .popup__close-button{background-color:transparent;background-image:url(images/closeIcone-white.973e77374abfb705de40.svg);background-position:50%;background-repeat:no-repeat;border:none;cursor:pointer;height:32px;position:absolute;right:-40px;top:-40px;width:32px}.popup__close-button:hover{opacity:.6}@media (max-width:700px){.popup__close-button{background-image:url(images/closeIcone-white-mob.622e8cdafa2222aa7c54.svg);height:20px;right:5px;top:-35px;width:20px}}
 .popup__container{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);display:flex;flex-direction:column;margin:auto;padding:34px 36px 37px;position:relative}@media (max-width:700px){.popup__container{padding:25px 22px}}
@@ -32,6 +36,7 @@
 .popup__save-button_inactive{background-color:transparent;border:1px solid #000;color:#000;opacity:.2;pointer-events:none}.popup__save-button_inactive:hover{opacity:.8}
 .popup__title{color:#000;font-size:24px;font-style:normal;font-weight:900;line-height:1.29;margin:0}@media (max-width:700px){.popup__title{font-size:18px;line-height:1.22}}
 .popup_opened{opacity:1;visibility:visible}
+.popup__title-confirm{margin-bottom:20px}
 .popup-picture{align-items:center;background-color:rgba(0,0,0,.9);justify-content:center;margin:0;padding:0;width:100%}
 .popup-picture__title{font-size:12px;font-weight:400;line-height:1.15;margin:10px 0 0}
 .popup-picture__image{align-items:center;background-color:transparent;display:flex;flex-direction:column;justify-content:center;max-height:75vh;max-width:75vw;position:relative}
